syntax = "proto3";

option csharp_namespace = "UserService.Proto";

service GrpcUser {
    rpc NotifyDeleteAccountEntity (NotifyDeleteAccountRequest) returns (NotifyDeleteAccountResponse);
}

message NotifyDeleteAccountRequest {
    int32 accountId = 1;
}

message NotifyDeleteAccountResponse {}
